# mcp-enterprise-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_CLEANUP_REPORT.md  Dockerfile.mcp  ENTERPRISE_COMPLETE.md  ENTERPRISE_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP_IMPLEMENTATION_REPORT.md  MCP_QUICK_REFERENCE.md  MCP_UPGRADE_SUMMARY.md  MCP_USAGE_GUIDE.md  MYSQL_SETUP.md  NEXT_STEPS_2025-11-19.md  PHASE6_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.md.backup  ROADMAP.md  SUMMARY.md  USER_GUIDE_REMOTE.md  config_for_colleagues.json  deploy.sh  docker-compose.mcp.yml  docker-compose.yml  install_dependencies.sh  mcp_client_http.py  mcp_server_enterprise.py  mcp_server_unified.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  restart_server_complete.sh  run_tests.sh  setup.py  start.sh  (+6 more)
.archived/: README.md.old  requirements_complete.txt
.claude/: DOCUMENTATION_MAINTENANCE_STRATEGY.md  DOC_GENERATION_RULES.md  FOLDER_STRUCTURE_SPEC.md  REPORT_GENERATION_BAN.md  ROOT_DIRECTORY_ORGANIZATION.md
config/: claude_desktop_config.json  config.example.yaml  config_for_colleagues.json  config_unified.yaml  evolution_config.yaml  mcp_config.json
docs/: GRAPH_GENERATOR_GUIDE.md  HUGGINGFACE_MODEL_SETUP.md  HYBRID_MEMORY_INTEGRATION.md  INDEX.md  MCP_SYSTEM_STATUS_2025-11-19.md  MEMORY_RETRIEVAL_FIX_2025-11-19.md  MODEL_SETUP_QUICKSTART.md  PROJECT_CLEANUP_2025-11-19.md  PROJECT_MEMORY_SYSTEM_DESIGN.md  QUICKSTART_HYBRID_MEMORY.md  README.md  SESSION_ROLLBACK_FIX_2025-01-19.md  STORAGE_STRATEGY_ANALYSIS.md  VISUALIZATION_CENTER_DESIGN.md
mcp-admin-ui/: README.md  index.html  package.json  pnpm-lock.yaml
nginx/: nginx.conf
scripts/: archive_docs.py  clean_technical_debt.py  cleanup_database.sql  comprehensive_fix.py  create_error_firewall_schema.sql  create_evolution_tables.sql  deploy_evolution_system.sh  download_models.py  (+13 more)
(+252 files in other folders)
